[tool.poetry]
name = "{{ cookiecutter.__package_slug }}"
version = "0.0.0"
description = "{{ cookiecutter.package_short_description }}"
authors = ["Colin Smith <colin.smith@wisc.edu>"]
maintainers = ["Colin Smith <colin.smith@wisc.edu>"]
license = "{{ cookiecutter.open_source_license }}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"] # version location
branch = "main"                             # branch to make releases of
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-convert GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = false                   # patch release by default

[tool.semantic_release.changelog]
template_dir = "docs/source/_templates/"    # changelog template directory

[tool.pylint.'MESSAGES.CONTROL']
disable = "too-many-public-methods,c-extension-no-member"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"